--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,48 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center" id="intro">
+    <h1 class="display-5">Your digital presence is your calling card</h1>
+    <p>Proudly Servicing Central Florida</p>
+    <p>Great digital media brings prospective renters and buyers directly to you. We understand this, which is why we use the highest quality cameras, retouching, and marketing-informed content for every project — no matter what. Led by award-winning digital media specialist Heaven Keller, Heaven's Lens finds success by helping you sell your listings more quickly, and for a higher price tag.</p>
+
+    <button type="button" class="btn btn-light btn-lg">Book Now</button>
+    <button type="button" class="btn btn-light btn-lg">Pricing & Services</button>
+</div>
+
+<div id="link-cards">
+
+</div>
+
+<section>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://static.wixstatic.com/media/e54408_149ceb47840245e88af19c22772c6508~mv2.jpg/v1/fill/w_584,h_996,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/e54408_149ceb47840245e88af19c22772c6508~mv2.jpg" alt="s.Drone_Work_Graded-3.jpg" style="width: 584px; height: 996px; object-fit: cover;" fetchpriority="high">
+            </div>
+            <div class="col-md-6">
+                <h1>Our Guarauntee</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div>
+
+</div>
+
+<div>
+
+</div>
+
+<div>
+
+</div>
+
+<div>
+
+</div>
+
+<div>
+
 </div>
