--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-custom-color navbar-expand-sm navbar-toggleable-sm navbar-light mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HeavensLens</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Heavens' Lens</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -29,6 +29,17 @@
                 </div>
             </div>
         </nav>
+        <!--<div class="text-center">
+            <h1 class="display-6">Heaven's Lens</h1>
+        </div>
+
+        <nav class="nav justify-content-center">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RealEstate">Pricing and Services</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RealEstate">Photography</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RealEstate">Aerial Media</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RealEstate">Graphic Design</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RealEstate">Videography</a>
+        </nav>-->
     </header>
     <div class="container">
         <main role="main" class="pb-3">
