--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -17,6 +17,10 @@ a {
   border-color: #1861ac;
 }
 
+.navbar-custom-color {
+    background-color: #f2edea;
+}
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
