--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+* {
+    /*background: rgb(0 100 0 / 0.1) !important;*/
+}
+
 html {
   font-size: 14px;
 }
@@ -14,5 +18,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #f2edea;
 }
