Spacing and adding more elements on to the index page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,18 +2,57 @@
     ViewData["Title"] = "Home Page";
 }
 
+<br />
+
 <div class="text-center" id="intro">
     <h1 class="display-5">Your digital presence is your calling card</h1>
-    <p>Proudly Servicing Central Florida</p>
+    <br />
+    <h4>Proudly Servicing Central Florida</h4>
+    <br />
     <p>Great digital media brings prospective renters and buyers directly to you. We understand this, which is why we use the highest quality cameras, retouching, and marketing-informed content for every project — no matter what. Led by award-winning digital media specialist Heaven Keller, Heaven's Lens finds success by helping you sell your listings more quickly, and for a higher price tag.</p>
-
+    <br />
     <button type="button" class="btn btn-light btn-lg">Book Now</button>
     <button type="button" class="btn btn-light btn-lg">Pricing & Services</button>
 </div>
 
-<div id="link-cards">
+<br />
 
-</div>
+<section id="page-cards">
+    <div id="link-cards">
+        <div class="card-group">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Graphic Design</h5>
+                    <button type="button" class="btn btn-light btn-lg">View More</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Photography</h5>
+                    <button type="button" class="btn btn-light btn-lg">View More</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Videography</h5>
+                    <button type="button" class="btn btn-light btn-lg">View More</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Aerial Media</h5>
+                    <button type="button" class="btn btn-light btn-lg">View More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br />
 
 <section>
     <div class="container text-center">
@@ -23,27 +62,37 @@
             </div>
             <div class="col-md-6">
                 <h1>Our Guarauntee</h1>
+                <br />
+                <h2>Quality Without Compromise</h2>
+                <p>We strive to capture the true essence of every property.  Our visual materials deliver exceptional results, elevating our clients' listings and amplifying marketing efforts.</p>
+                <br />
+                <h2>Fast Turnaround</h2>
+                <p>We understand the value of your time, which is why we guarantee prompt delivery of all results, ensuring 1-2 day turnaround times. Your satisfaction is our top priority.</p>
+                <br />
+                <h2>Tailored Solutions, Always</h2>
+                <p>From thoughtfully curated photography to social media graphics, we offer a range of services to meet your needs. Allow us to simplify the process for you.</p>
+                <br />
+                <button type="button" class="btn btn-light btn-lg">Book Now</button>
+
             </div>
         </div>
     </div>
 </section>
 
-<div>
+<br />
 
-</div>
+<section id="social-media-statistics">
 
-<div>
+</section>
 
-</div>
+<br />
 
-<div>
+<section id="faq">
 
-</div>
+</section>
 
-<div>
+<br />
 
-</div>
+<section id="about-me">
 
-<div>
-
-</div>
+</section>
