--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-custom-color navbar-expand-sm navbar-toggleable-sm navbar-light mb-3">
+        <nav class="navbar fixed-top navbar-custom-color navbar-expand-sm navbar-toggleable-sm navbar-light mb-3 shadow-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Heavens' Lens</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Heaven's Lens</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,8 +30,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="">
+        <main role="main" class="pb-0">
             @RenderBody()
         </main>
     </div>
