--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,4 +20,36 @@ html {
 body {
     margin-bottom: 60px;
     background-color: #f2edea;
+    padding-top: 60px;
+}
+
+.custom-link-card-bg {
+    background-color: #62605f;
+}
+
+.navbar {
+    margin-bottom: 0px;
+}
+
+.jumbotron {
+    position: relative;
+    overflow: hidden;
+    background-color: black;
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
+
+.jumbotron__background {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+.jumbotron .container {
+    z-index: 2;
+    position: relative;
 }
