Add in FAQ section

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿=@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -44,8 +44,8 @@
         <div class="row">
             <div class="card-group">
                 <div class="col-md-3">
-                    <div class="card">
-                        <img src="https://static.wixstatic.com/media/e54408_5d4254f6c0a444b8a71763073bfc94f4~mv2.jpg/v1/fill/w_280,h_260,fp_0.46_0.86,q_80,usm_0.66_1.00_0.01,enc_auto/e54408_5d4254f6c0a444b8a71763073bfc94f4~mv2.jpg" class="card-img-top" alt="Just Sold Picture">
+                    <div class="card"> <!--width 280 height 260 for each image-->
+                        <img src="./img/just_sold.jpg" class="card-img-top" alt="Just Sold Picture">
                         <div class="card-body text-center custom-link-card-bg text-white">
                             <h5 class="card-title">Graphic Design</h5>
                             <button type="button" class="btn btn-outline-light">View More</button>
@@ -61,7 +61,6 @@
                         </div>
                     </div>
                 </div>
-                
                 <div class="col-md-3">
                     <div class="card">
                     <img src="https://static.wixstatic.com/media/nsplsh_41516c2d4a31396f635745~mv2_d_3648_5472_s_4_2.jpg/v1/fill/w_280,h_260,fp_0.50_0.50,q_80,usm_0.66_1.00_0.01,enc_auto/nsplsh_41516c2d4a31396f635745~mv2_d_3648_5472_s_4_2.jpg" class="card-img-top" alt="...">
@@ -71,8 +70,6 @@
                     </div>
                     </div>
                 </div>
-                
-
                 <div class="col-md-3">
                     <div class="card">
                         <img src="https://static.wixstatic.com/media/e54408_f0baa458324042b89ffeb3f77eed4dca~mv2.jpg/v1/fill/w_280,h_260,fp_0.50_0.50,q_80,usm_0.66_1.00_0.01,enc_auto/e54408_f0baa458324042b89ffeb3f77eed4dca~mv2.jpg" class="card-img-top" alt="...">
@@ -116,7 +113,7 @@
 
 <section id="social-media-statistics">
     <div class="container text-center">
-        <h1>Did you know?</h1>
+        <h1 id="section-title">Did you know?</h1>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
@@ -157,7 +154,37 @@
 <br />
 
 <section id="faq">
+    <div class="container text-center">
+        <h1 id="section-header">Frequently Asked Questions</h1>
+    </div>
+    <div class="container text-center">
+        <div class="row row-cols-3">
+            <div class="col">
+                <h4></h4>
 
+            </div>
+            <div class="col">
+                Column
+
+            </div>
+            <div class="col">
+                Column
+
+            </div>
+            <div class="col">
+                Column
+
+            </div>
+            <div class="col">
+                Column
+
+            </div>
+            <div class="col">
+                Column
+
+            </div>
+        </div>
+    </div>
 </section>
 
 <br />
