--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,6 +23,30 @@ body {
     padding-top: 60px;
 }
 
+h1, h2, h3, h4, h5 {
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#faq-title {
+    padding-bottom: 25px;
+}
+
+#section-header {
+    padding: 50px;
+}
+
+#page-cards {
+    padding: 50px;
+}
+
+.banner-text {
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+
 .custom-link-card-bg {
     background-color: #62605f;
 }
@@ -35,8 +59,8 @@ body {
     position: relative;
     overflow: hidden;
     background-color: black;
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding-bottom: 150px;
+    padding-top: 150px;
 }
 
 .jumbotron__background {
@@ -46,7 +70,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .jumbotron .container {
