filled out about me section

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="jumbotron jumbotron-fluid">
 
     <picture>
-        <source media="(min-width:800px)" srcset="./img/landscape_drove_shot.jpg">
-        <img src="./img/landscape_drove_shot.jpg" alt="Landscape Drone Photo" class="jumbotron__background img-fluid">
+        <source media="(min-width:800px)" srcset="./img/landscape_drone_shot.jpg">
+        <img class="jumbotron__background img-fluid" src="./img/landscape_drove_shot.jpg" alt="Landscape Drone Photo">
     </picture>
 
     <div class="container text-white text-center">
@@ -74,7 +74,7 @@
 <section class="align">
     <div class="row">
         <div class="col-md-6">
-            <img class="img-fluid" src="./img/s.Drone_Work_Graded-3.jpg" alt="s.Drone_Work_Graded-3.jpg" fetchpriority="high">
+            <img class="img-fluid" src="./img/drone-home-picture.jpg" alt="s.Drone_Work_Graded-3.jpg" fetchpriority="high">
         </div>
         <div class="col-md-6 container-fluid">
                 <h1>Our Guarauntee</h1>
@@ -174,5 +174,25 @@
 <br />
 
 <section id="about-me">
-
+    <div class="about-me-bg container-fluid text-center">
+        <div class="container-fluid about-me">
+            <div class="row">
+                <div class="col about-section">
+                    <h4 id="faq-title">About Heaven's Lens</h4>
+                    <p>
+                        Heaven Keller is a commercial media specialist that focuses on a range of residential real estate media services.
+                    </p>
+                    <p>
+                        Originally from Cocoa Beach, Florida, Heaven showed an interest in art at the age of 12. She spent several years making short films, documentaries, and promotional content for businesses before attending University of Central Florida with a festival-won scholarship.
+                    </p>
+                    <p>
+                        Heaven's personal work is deeply connected to the beauty of nature and self-actualization.  Having discovered the awe-inspiring potential of the digital medium, Heaven has made it her commitment to bring impactful ideas and services to the forefront of the digital marketing landscape.
+                    </p>
+                </div>
+                <div class="col">
+                    <img class="bio-picture img-fluid" id="heaven-image" src="./img/heaven-desk-picture.jpg" alt="...">
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
