struggling to position bio and picture correctly

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                 <h2>Tailored Solutions, Always</h2>
                 <p>From thoughtfully curated photography to social media graphics, we offer a range of services to meet your needs. Allow us to simplify the process for you.</p>
                 <br />
-                <button type="button" class="btn btn-light btn-lg">Book Now</button>
+                <button type="button" class="btn btn-light btn-lg align-content-center">Book Now</button>
          </div>
     </div>
 </section>
@@ -189,7 +189,7 @@
                         Heaven's personal work is deeply connected to the beauty of nature and self-actualization.  Having discovered the awe-inspiring potential of the digital medium, Heaven has made it her commitment to bring impactful ideas and services to the forefront of the digital marketing landscape.
                     </p>
                 </div>
-                <div class="col">
+                <div class="col bio-picture-container">
                     <img class="bio-picture img-fluid" id="heaven-image" src="./img/heaven-desk-picture.jpg" alt="...">
                 </div>
             </div>
