more trial and error with css

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -176,7 +176,7 @@
 <section id="about-me">
     <div class="about-me-bg container-fluid text-center">
         <div class="container-fluid about-me">
-            <div class="row">
+            <div class="row" style="margin-top: 75px;">
                 <div class="col about-section">
                     <h4 id="faq-title">About Heaven's Lens</h4>
                     <p>
