--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5 {
 #page-cards {
     padding: 50px;
 }
-
+/*
 .about-me-bg {
     background-color: #7a7572;
 }
@@ -50,20 +50,21 @@ h1, h2, h3, h4, h5 {
     align-items: center;
 }
 
-.about-section {
-    background-color: #f2edea;
-    /*max-width: 460px;
-    max-height: 750px;*/
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .about-section,
 .bio-picture-container {
     height: 75%;
+}
+*/
+
+.about-section {
+    display: flex;
+    margin-top: 25px;
+    margin-left: 50px;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .banner-text {
@@ -81,7 +82,7 @@ h1, h2, h3, h4, h5 {
 .bio-picture-container {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
